# tit-for-tat

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
src/: game.rs  lib.rs  list.rs  main.rs  normal.rs  payoff.rs  per_player.rs  seq.rs
src/core/: mod.rs  payoff.rs  per_player.rs
src/game/: extensive.rs  mod.rs  norm.rs  normal.rs  sim.rs  simultaneous.rs  traits.rs
src/seq/: player.rs
t4t/: Cargo.toml  README.md
t4t-games/: Cargo.toml  README.md
t4t-games/examples/: axelrod.rs  tic_tac_toe.rs
t4t-games/src/: dilemma.rs  lib.rs  rock_paper_scissors.rs  rps.rs  tic_tac_toe.rs
t4t/src/: action.rs  combinatorial.rs  context.rs  distribution.rs  dominated.rs  error.rs  event.rs  exec.rs  extensive.rs  finite.rs  game.rs  history.rs  kind.rs  lib.rs  matchup.rs  minimax.rs  moves.rs  normal.rs  outcome.rs  past.rs  payoff.rs  per_player.rs  play.rs  playable.rs  player.rs  ply.rs  possible_profiles.rs  profile.rs  record.rs  repeated.rs  result.rs  rules.rs  score.rs  seq_game.rs  simultaneous.rs  state_based.rs  strategic.rs  strategy.rs  summary.rs  tournament.rs  (+3 more)
tft/: Cargo.toml
tft-games/: Cargo.toml  README.md
tft-games/src/: dilemma.rs  lib.rs  rps.rs
tft/src/: context.rs  core.rs  distribution.rs  dominated.rs  engine.rs  error.rs  exec.rs  form.rs  game.rs  history.rs  iterated.rs  kind.rs  lib.rs  moves.rs  norm.rs  normal.rs  outcome.rs  payoff.rs  per_player.rs  play.rs  player.rs  profile.rs  record.rs  seq.rs  seq_outcome.rs  sim.rs  sim_game.rs  sim_outcome.rs  simo.rs  simultaneous.rs  solution.rs  strategic.rs  strategy.rs  transcript.rs  tree.rs
tft/src/core/: moves.rs  outcome.rs  payoff.rs  per_player.rs  profile.rs  table.rs
tft/src/exec/: history.rs
tft/src/game/: big_normal.rs  bimatrix.rs  mod.rs  norm.rs  normal.rs  seq.rs  sim.rs  simultaneous.rs  table.rs  traits.rs
tft/src/game/norm/: normal.rs  outcome.rs
tft/src/game/sim/: profile.rs
tft/src/norm/: outcome.rs  profile.rs
tft/src/seq/: context.rs  game.rs  outcome.rs  transcript.rs  tree.rs
tft/src/sim/: context.rs  game.rs  normal.rs  outcome.rs  profile.rs  repeated.rs  simultaneous.rs  solution.rs
