[package]
name = "tft"
version = "0.1.0"
authors = ["Eric Walkingshaw <eric@walkingshaw.net>"]
edition = "2021"
description = "Tit-for-tat: a game theory toolbox."
repository = "https://github.com/walkie/tit-for-tat/"

[dependencies]
derive_more = "0.99.17"
itertools = "0.10.3"
num = "0.4.0"
probability = "0.18.0"
