[package]
name = "t4t-games"
version = "0.0.4"
authors = ["Eric Walkingshaw <eric@walkingshaw.net>"]
edition = "2021"
description = "A library of games and strategies built with t4t."
repository = "https://github.com/walkie/tit-for-tat/"
license = "MIT"
categories = ["mathematics", "simulation"]
keywords = ["game-theory", "economics", "evolution"]

[dependencies]
log = "0.4.21"
# t4t = "0.0.5"
t4t = { path = "../t4t" }

[dev-dependencies]
env_logger = "0.11.3"
test-log = "0.2.16"
