[package]
name = "t4t"
version = "0.0.3"
authors = ["Eric Walkingshaw <eric@walkingshaw.net>"]
edition = "2021"
description = "Tit-for-tat: a game theory toolbox."
repository = "https://github.com/walkie/tit-for-tat/"
license = "MIT"
categories = ["mathematics", "simulation"]
keywords = ["game-theory", "economics", "evolution"]

[dependencies]
derive_more = "0.99.17"
dyn-clone = "1.0.14"
itertools = "0.11.0"
log = "0.4.20"
num = "0.4.1"
rand = "0.8.5"
rand_distr = "0.4.3"
thiserror = "1.0.49"

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.12"
