[package]
name = "t4t"
version = "0.1.0"
authors = ["Eric Walkingshaw <eric@walkingshaw.net>"]
edition = "2021"
description = "Tit-for-tat: a game theory toolbox."
repository = "https://github.com/walkie/tit-for-tat/"
license = "MIT"
categories = ["mathematics", "simulation"]
keywords = ["game-theory", "economics", "evolution"]

[dependencies]
derive_more = "0.99.17"
dyn-clone = "1.0.17"
itertools = "0.13.0"
log = "0.4.21"
num = "0.4.3"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"

[dev-dependencies]
env_logger = "0.11.3"
impls = "1.0.3"
test-log = "0.2.12"
