[package]
name = "t4t"
version = "0.1.1"
authors = ["Eric Walkingshaw <eric@walkingshaw.net>"]
edition = "2021"
description = "Tit-for-tat: a game theory toolbox."
repository = "https://github.com/walkie/tit-for-tat/"
license = "MIT"
categories = ["mathematics", "simulation"]
keywords = ["game-theory", "economics", "evolution"]

[dependencies]
derive_more = { version = "1.0.0", features = ["as_ref", "index", "index_mut"] }
dyn-clone = "1.0.17"
im = "15.1.0"
itertools = "0.13.0"
log = "0.4.22"
num = "0.4.3"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"

[dev-dependencies]
env_logger = "0.11.3"
impls = "1.0.3"
test-log = "0.2.16"
