[package]
name = "tft-games"
version = "0.1.0"
authors = ["Eric Walkingshaw <eric@walkingshaw.net>"]
edition = "2021"
description = "A library of games and strategies built with tft."
repository = "https://github.com/walkie/tit-for-tat/"

[dependencies]
log = "0.4.17"
tft = { path = "../tft" }

[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.10"
