[package]
name = "tft"
version = "0.1.0"
authors = ["Eric Walkingshaw <eric@walkingshaw.net>"]
edition = "2021"
description = "Tit-for-tat: a game theory toolbox."
repository = "https://github.com/walkie/tit-for-tat/"

[dependencies]
derive_more = "0.99.17"
dyn-clone = "1.0.8"
itertools = "0.10.3"
log = "0.4.17"
num = "0.4.0"

[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.11"
