[package]
name = "tft"
version = "0.0.1"
authors = ["Eric Walkingshaw <eric@walkingshaw.net>"]
edition = "2021"
description = "Tit-for-tat: a game theory toolbox."
repository = "https://github.com/walkie/tit-for-tat/"
license = "MIT OR Apache-2.0"

[dependencies]
derive_more = "0.99.17"
dyn-clone = "1.0.11"
itertools = "0.10.5"
log = "0.4.17"
num = "0.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
thiserror = "1.0.40"

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.11"
